# brain-go-brrr

./: .coveragerc  .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANNEL_POSITIONS_SOLUTION.md  CHECKPOINT_2024-07-22.md  CHECKPOINT_2025-07-23.md  CHECKPOINT_2025-07-29.md  CHECKPOINT_2025-07-29_EVENING.md  CHECKPOINT_2025-07-29_FINAL.md  CI_ALIGNMENT_GUIDE.md  CLAUDE.md  CLEANUP_PLAN.md  CLEAN_CODE_FIXES_SUMMARY.md  CLEAN_CODE_STATUS.md  CLEAN_INTEGRATION_SUMMARY.md  COMPLETE_AUDIT_FINDINGS.md  CONFIGURATION_CHECKLIST.md  COVERAGE_STATUS.md  CRITICAL_FINDINGS_AUTOREJECT.md  DATALOADER_HANG_ROOT_CAUSE.md  DEEP_NAN_INVESTIGATION.py  Dockerfile  EEGPT_CLINICAL_ROADMAP.md  EEGPT_FIXED_SUMMARY.md  EEGPT_INVESTIGATION_FINDINGS.md  EEGPT_NEXT_STEPS.md  EEGPT_REALITY_CHECK.md  EEGPT_TRUE_STATUS.md  FINAL_LAUNCH.sh  FINAL_NAN_FIX_COMPREHENSIVE.md  FINAL_ORGANIZATION.md  FINAL_TEST_STATUS.md  FIXED_LAUNCH.sh  FIX_ALL_TESTS.py  FIX_EEGPT_EMBED_DIM.md  FIX_SUMMARY.md  HANDOFF_PROMPT.md  INTEGRATION_PLAN.md  (+77 more)
.claude/: global-CLAUDE.md  guidelines.md
.github/ISSUE_TEMPLATE/: bayesian_autoreject.md  claude_workflow_guide.md  datetime_deprecation_fix.md  memory_optimization.md  report_id_refactor.md  sleep_event_detection.md
.github/issues/: add-redis-to-ci.md  audit-and-roadmap.md  complete-integration-tests.md  enhance-health-endpoint.md  fix-edf-streaming-tests.md  fix-mypy-type-errors.md  fix-redis-serialization.md  implement-event-detection.md  implement-sleep-analysis-endpoint.md  next-steps-to-singularity.md  performance-optimization-audit.md  update-dockerfile-paths.md  update-documentation.md
.github/workflows/: WORKFLOW_IMPROVEMENTS.md  auto-doc.yml  benchmarks.yml  ci.yml  claude.yml  nightly-integration.yml  quality-checks.yml  smoke-test.yml
api/: __init__.py  app.py  auth.py  cache.py  dependencies.py  main.py  main_new.py  models.py  routes.py  schemas.py  test_api.py
api/routers/: cache.py  jobs.py  qc.py  queue.py  resources.py  sleep.py
api/services/: __init__.py  redis_migration.md  redis_pool.py
archive/: COMPLETE_CLEANUP_SUMMARY.md  ROOT_CLEANUP_SUMMARY.md
archive/benchmark_results/: end_to_end_performance.txt
archive/old_scripts/: check_cache.py  monitor_extraction.py
archive/temp_files/: clean_macos_artifacts.sh  launch_bulletproof_training.sh
brain_go_brrr/models/: __init__.py  eegpt_architecture.py
brain_go_brrr/utils/: __init__.py
brain_go_brrr/visualization/: markdown_report.py
configs/: tuab_cached_simple.yaml  tuab_quick_test.yaml
core/: edf_loader.py  exceptions.py
core/abnormal/: __init__.py
core/jobs/: __init__.py  store.py
core/pipeline/: parallel.py
core/quality/: __init__.py
core/snippets/: __init__.py
data_backup/: env_backup
docs/: BDD-behavior-specifications.md  BENCHMARKS.md  CONFIGURATION_CHECKLIST.md  EEGPT_IMPLEMENTATION_ROADMAP.md  EEGPT_TRAINING_DOSSIER.md  IMPLEMENTATION_PLAN.md  MVP_SUMMARY.md  PC_SETUP_GUIDE.md  PERFORMANCE_BENCHMARKING_GUIDE.md  PRD-product-requirements.md  PROJECT_STATUS.md  README.md  ROUGH_DRAFT.md  SOLID_ARCHITECTURE_PATTERNS.md  SPEC-abnormality-detection.md  TDD_TEST_SPECIFICATIONS.md  TESTING_FIXES_SUMMARY.md  TRD-technical-requirements.md  VERTICAL_SLICE_STRATEGY.md  agentic-workflow.md  autoreject-ablation-plan.md  coverage-optimization-guide.md  development-standards.md  index.md  literature-master-reference.md  literature_summary.md  progress-summary-20250803.md  tech-stack.md  technical-debt-paydown-summary.md
docs/00-overview/: IMPLEMENTATION_STATUS_DETAILED.md  README.md
docs/01-architecture/: AUTOREJECT_PRECISE_INTEGRATION_SPEC.md  AUTOREJECT_TDD_IMPLEMENTATION_PLAN.md  DUAL_PIPELINE_ARCHITECTURE.md  EVENT_DETECTION_ARCHITECTURE.md  HIERARCHICAL_PIPELINE_DESIGN.md
docs/02-implementation/: EEGPT_IMPLEMENTATION_GUIDE.md  HYPERPARAMETER_OPTIMIZATION.md  TESTING_BEST_PRACTICES.md
docs/03-api/: API_DESIGN_PATTERNS.md
docs/04-testing/: INTEGRATION_TEST_SCENARIOS.md
docs/05-deployment/: DEPLOYMENT_ARCHITECTURE.md  FAILURE_MODE_ANALYSIS.md
docs/archive/: CACHE_FIX_SUMMARY.md  (+13 more)
examples/: end_to_end_pipeline.py
infra/: cache.py
scripts/: CLEANUP_SUMMARY.md  README.md  benchmark_end_to_end.py  build_tuab_cache.py  build_tuab_index.py  cleanup_directory_structure.py  compute_normalization_stats.py  coverage_report.py  create_test_checkpoint.py  create_test_fixtures.py  debug_eegpt_inference.py  fix_ci.py  fix_eegpt_embed_dim.py  fix_test_imports.py  inspect_eegpt_checkpoint.py  monitor_every_30min.sh  monitor_training_live.sh  mypy_daemon.sh  quick_api_test.py  reorganize_tests.py  run_benchmarks.py  run_green_baseline.sh  smoke_train.py  test_cache_build.py  test_cached_loading.py  test_current_eegpt_state.py  test_eegpt_normalization.py  test_eegpt_qc_integration.py  test_eegpt_real_inference.py  test_eegpt_updated.py  test_flexible_pipeline.py  test_full_pipeline.py  test_markdown_report.py  test_simple_eegpt.py  test_sleep_analysis.py  trace_eegpt_forward.py  train_sleep_probe.py  validate_data_pipeline.py  verify_all_fixes.py
services/: __init__.py  abnormality_detector.py  eegpt_feature_extractor.py  parallel_pipeline.py  qc_flagger.py  sleep_metrics.py  snippet_maker.py
stubs/: GPUtil.pyi  autoreject.pyi  tsfresh.pyi  yasa.pyi
temp_docs/: BENCHMARK_RESULTS.md  EEGPT_TDD_MVP_PLAN.md
tests/: __init__.py  _mocks.py  _test_utils.py  conftest.py  conftest_tuab.py  import_mapping.md  test_api_auth.py  test_api_endpoints.py  test_api_linear_probe.py  test_code_quality.py  test_edf_streaming.py  test_eegpt_extreme_discrimination.py  test_eegpt_feature_extractor.py  test_eegpt_linear_probe.py  test_eegpt_pipeline.py  test_eegpt_streaming_integration.py  test_eegpt_summary_tokens.py  test_encoder_raw_output.py  test_job_queue_api.py  test_linear_probe.py  test_parallel_pipeline.py  test_pdf_report_integration.py  test_preprocessing_pipeline.py  test_redis_caching.py  test_sleep_analysis.py  test_sleep_analysis_api.py  test_sleep_enhanced.py  test_sleep_preprocessor.py  test_yasa_channel_aliasing.py  test_yasa_compliance.py  test_yasa_smoothing.py
(+458 files in other folders)
